Add ability to upload image as skill icon

--- a/skills/templates/skills/skill_edit.html
+++ b/skills/templates/skills/skill_edit.html
@@ -25,6 +25,19 @@
   </div>
   <div class="input-field-row">
     <div class="input-field">
+      {% if skill.image %}
+      <img src="{{trainingbit.getImage}}" style="height: 5rem">
+      {% endif %}
+      <input id="new-skill-icon" type="file" name="skill-icon">
+    </div>
+    <div class="help-text">
+      <h6>Cover Image</h6>
+      Drag a file from your computer on to the button, or click the button to find
+      a file on your computer that will be the cover image of this training bit.
+    </div>
+  </div>
+  <div class="input-field-row">
+    <div class="input-field">
       <input type="text" name="tags" placeholder="organisation politics planning ..." value="{{ tags }}">
     </div>
     <div class="help-text">
