--- a/scss/skills.scss
+++ b/scss/skills.scss
@@ -1,7 +1,49 @@
 
 .skill-list-view {
-  img.skill-icon {
-    float: left;
+  $skill-height: rem-calc(160px);
+
+  li {
+    height: $skill-height;
+
+    &>div.columns {
+      height: $skill-height;
+      float: left;
+      padding:0;
+    }
+  }
+
+
+  div.skill-icon {
+  }
+  div.skill-description {
+    position: relative;
+    h2 {
+      font-size: rem-calc(23px);
+      color: $gcl-red;
+      margin-bottom: 0;
+    }
+    p {
+      font-weight: 200;
+    }
+
+    div.skill-info {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+
+      font-size: 0.6rem;
+
+      hr {
+        margin-top:    0.3rem;
+        margin-bottom: 0.3rem;
+      }
+
+      .trainingbit-count {
+        font-size: 0.7rem;
+        color: $gcl-lightgray;
+      }
+    }
   }
 
 }
