Fix skill image in `skill_edit`

--- a/skills/templates/skills/skill_edit.html
+++ b/skills/templates/skills/skill_edit.html
@@ -26,7 +26,7 @@
   <div class="input-field-row">
     <div class="input-field">
       {% if skill.image %}
-      <img src="{{trainingbit.getImage}}" style="height: 5rem">
+      <img src="{{skill.getImage}}" style="height: 5rem">
       {% endif %}
       <input id="new-skill-icon" type="file" name="skill-icon">
     </div>
