--- a/scss/skills.scss
+++ b/scss/skills.scss
@@ -1,3 +1,11 @@
+body.skills-overview {
+  .page-buttons {
+    .button {
+      color: white;
+      background-color: $gcl-darkgray;
+    }
+  }
+}
 
 .skill-list-view {
   $skill-height: rem-calc(160px);
@@ -9,14 +17,20 @@
       height: $skill-height;
       float: left;
       padding:0;
+
+      &.skill-description {
+        padding-left: 0.5rem;
+        .skill-info {
+          padding-left: 0.5rem;
+        }
+      }
     }
   }
 
 
-  div.skill-icon {
-  }
   div.skill-description {
     position: relative;
+
     h2 {
       font-size: rem-calc(23px);
       color: $gcl-red;
@@ -31,6 +45,7 @@
       bottom: 0;
       left: 0;
       width: 100%;
+      background-color: white;
 
       font-size: 0.6rem;
 
