--- a/skills/templates/skills/skills_overview.html
+++ b/skills/templates/skills/skills_overview.html
@@ -39,7 +39,7 @@
       <a href="{% url 'skills:skill_view' skill.id %}"><h2>{{skill.name}}</h2></a>
       <p>{{skill.description}}</p>
       <div class="skill-info">
-        <span class="trainingbit-count">{{ skill.training_bits.count }} Training Bits</span>
+        <span class="trainingbit-count">{{ skill.trainingbits.count }} Training Bits</span>
         <hr>
         <span class="icon small heart red"></span> 23
         <span class="icon small chat red"></span> 9
