--- a/global_change_lab/templates/front_page.html
+++ b/global_change_lab/templates/front_page.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <div id="front-page-greeter">
-  <h1>Change the world</h1>
-  <h2>Bit by Training Bit</h2>
+  <h2>Change the world</h2><br>
+  <h1>Bit by Training Bit</h1>
   <p>The Global Change Lab
   is a training hub for
   global activists</p>
