--- a/scss/app.scss
+++ b/scss/app.scss
@@ -85,6 +85,10 @@
   color: white;
 }
 
+.red {
+  color: $gcl-red;
+}
+
 %white-on-red {
   background-color: $gcl-red;
   color: white;
@@ -135,48 +139,6 @@ h3 {
   }
 }
 
-.top-bar {
-  @include main-column();
-
-  background-color: $gcl-lightgray;
-  // background-image: url(../../../static/images/top-football-guy-flattened.png);
-  background-image: url(../../../static/images/top-football-guy.png);
-  background-repeat: no-repeat;
-  background-position: 75% 0%;
-  // height: rem-calc(90px);
-  height: 100%;
-
-  img#gcl-logo {
-    margin-top: rem-calc(20px);
-    margin-bottom: rem-calc(20px);
-    height: rem-calc(25px);
-  }
-
-  .top-bar-section {
-    ul {
-      background: none;
-    }
-    li {
-      a {
-        @include rounded(rem-calc(2px));
-        font-weight: bold;
-        text-transform: uppercase;
-
-        .update-count {
-          display: inline-block;
-          background-color: $gcl-red;
-          margin-left: 10px;
-          margin-right: -15px;
-          padding-right: 15px;
-          padding-left: 15px;
-          @include rounded-right(rem-calc(2px));
-        }
-      }
-      margin-right: rem-calc(32px);
-      line-height: rem-calc(44px);
-    }
-  }
-}
 
 
 // Or selectively include components
