--- a/skills/templates/skills/skill_view.html
+++ b/skills/templates/skills/skill_view.html
@@ -6,15 +6,9 @@
 <div id="skill-cover">
   <img src="{{ skill.getImage }}">
   <h1>{{skill.name}}</h1>
-  <p>{{skill.description}}</p>
+  <p class="skill-description">{{skill.description}}</p>
 </div>
 
 <hr>
-hej
-{% for trainingbit in skill.trainingbits.all %}
-  {{ trainingbit.name }}
-hej
-{% endfor %}
-
 {% include 'partials/trainingbits_grid.html' with trainingbits=skill.trainingbits.all %}
 {% endblock %}
