[Update] Styles on <h2>

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1107,8 +1107,8 @@ $button-font-weight: bold;
 // $header-text-rendering: optimizeLegibility;
 
 // We use these to control header font sizes
-$h1-font-size: rem-calc(26px); 
-// $h2-font-size: rem-calc(37);
+$h1-font-size: rem-calc(26px);
+$h2-font-size: rem-calc(23px); // THIS DOESN'T WORK (doesn't actually change the size of <h2>)
 // $h3-font-size: rem-calc(27);
 // $h4-font-size: rem-calc(23);
 // $h5-font-size: rem-calc(18);
