--- a/scss/trainingbit_edit.scss
+++ b/scss/trainingbit_edit.scss
@@ -37,6 +37,7 @@
   input[name=name] {
     @extend %h1;
     @extend %stencil-font;
+    height: $h1-font-size * 2; // + rem-calc(15px);
     // font-family: 'Allerta Stencil', sans-serif;
   }
 
