[Add] Ability to edit content of training bits

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -6,7 +6,9 @@
 @import "scss/base";
 @import "scss/messages";
 @import "scss/trainer_dashboard";
+@import "scss/trainingbit_view";
 @import "scss/trainingbit_edit";
+@import "scss/trainingbit_edit_content";
 @import "scss/trainingbit_view";
 @import "scss/comments";
 @import "scss/skills";
