[Add] Can upload projects to training bits

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -10,6 +10,7 @@
 @import "scss/trainingbit_edit";
 @import "scss/trainingbit_edit_content";
 @import "scss/trainingbit_view";
+@import "scss/projects";
 @import "scss/comments";
 @import "scss/skills";
 
